Integrated app center sdk

--- a/Eldrow/Eldrow/Eldrow/Eldrow.csproj
+++ b/Eldrow/Eldrow/Eldrow/Eldrow.csproj
@@ -14,6 +14,8 @@
 	  <DotNetCliToolReference Include="dotnet-codegen" Version="0.6.1" />
 	  <EmbeddedResource Include="Words\Four.txt" />
     <PackageReference Include="LanguageExt.Core" Version="4.2.9" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="4.5.3" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="4.5.3" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
